--- a/PaginaPersonal/PaginaPersonal/estilosIndex.css
+++ b/PaginaPersonal/PaginaPersonal/estilosIndex.css
@@ -1,20 +1,22 @@
-body, html {
+body, html, div {
 
 	color: white;
     height: 100%;
     width: 100%;
 }
 
+html{
+scroll-behavior:smooth;    
+}
+
 body{
-    
     background: url(Fotos/fondo.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    font-style: italic;
 }
 
-
-#container{
-    
+#container{ 
     height: auto;
     width: 75%;
     background-color: gray;
@@ -22,14 +24,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    
-      
+    flex-wrap: wrap;   
 }
 
 #container h1{
  width: 100%;
  background-color: brown;
+ text-align: center;  
 }
 
 #container ul{
@@ -40,13 +41,90 @@ body{
     margin: auto;
 }
 
-#container div{
+#submarino{
+    display: flex;
+    justify-content: space-around;
+}
+
+#frame{
+    display: flex;
+    margin: auto;
+    width: 1000px;
+    height: 750px;
+}
+
+#frame2{
+    display: flex;
+    justify-content: center;
     
 }
 
-#divd{
- display: flex;  
+#imagen:hover{
+  transform: scale(0.9);
+  transition: transform .5s;    
+}
+
+#imagen{
+    display: flex;
+    justify-content: space-around;   
+    transition: transform .5s; 
+}
+
+#contact{
     justify-content: space-around;
+    text-align: center;
+}
+
+#descripcion{  
+    margin: auto; 
+    width: 70%;
+}
+
+#bloqueAlex{
+    margin-top: 15px;    
+}
+
+#dibujo1{
+    transition: transform .3s;
+    width:30%;
+    height:30%;
+}
+
+#dibujo1:hover{
+    transform: scale(1.3);
+  transition: transform .3s; 
+}
+
+#dibujo2{
+    transition: transform .3s; 
+    width:30%;
+    height:30%;
+}
+
+#dibujo2:hover{
+    transform: scale(1.3);
+  transition: transform .3s; 
+}
+
+#dibujo3{
+    transition: transform .3s;
+    width:30%;
+    height:30%;
+}
+
+#dibujo3:hover{
+    transform: scale(1.3);
+    transition: transform .3s; 
+}
+
+#linkedin{
+    height: 5%;
+    width: 5%;
+}
+
+#fotoAlex{
+    height: 50%; 
+    width: 50%;  
 }
 
 
